fixed cart total hidden by navbar on scroll

--- a/src/index.scss
+++ b/src/index.scss
@@ -360,7 +360,7 @@ body {
   }
 
   .cart-total {
-    top: 2em;
+    top: 100px;
     position: sticky;
     margin: 0 1em 0 1em;
     padding: 1em 2em;
